# mahjong-win-prob

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp  settile.cpp  settile.hpp  utils.hpp  win_prob.cpp  win_prob.hpp  win_prob1.cpp  win_prob1.hpp  win_prob2.cpp  win_prob2.hpp
